Fixed box overflow out of box

--- a/src/scss/core/_styles.scss
+++ b/src/scss/core/_styles.scss
@@ -10,6 +10,7 @@
     border-radius: 2px;
     box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.25);
     max-height: 215px;
+    width: 250px;
     overflow: auto;
     border: 1px solid $gray-20;
     border-radius: 0 0 3px 3px;
